--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerMessages"
         android:layout_width="361dp"
         android:layout_height="688dp"
         android:layout_marginBottom="16dp"
